[metadata]
name = modypy
version = 3.0.0rc1
author = Ralf Gerlich
author_email = ralf@ralfgerlich.biz
license = BSD 2-clause "Simplified" License
description = A framework for hierarchical modelling and simulation of dynamic systems
url = https://modypy.org
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
setup_requires = pytest-runner
install_requires = numpy>=1.18.1; scipy>=1.5.4
python_requires = >=3.6
tests_require = pytest

[versioneer]
VCS = git
style = pep440
versionfile_source = modypy/_version.py
tag_prefix = v
parentdir_prefix =  modypy-
